# qb-craft-demo

./: CMakeLists.txt  README.md  build.sh  conanfile.txt  perf-test-results.txt  slides.key
docs/assets/: header.json  header.jsonp
docs/assets/0F57582C-EABB-420B-92BC-C04A60CA314E/: 0F57582C-EABB-420B-92BC-C04A60CA314E.json  0F57582C-EABB-420B-92BC-C04A60CA314E.jsonp
docs/assets/1B5C2223-71FB-476D-935B-2C991694052A/: 1B5C2223-71FB-476D-935B-2C991694052A.json
docs/assets/5A21496E-F2D6-4854-A49E-3AC307F096B1/: 5A21496E-F2D6-4854-A49E-3AC307F096B1.jsonp
docs/assets/8DFAD0EF-B871-4B55-87E1-E19BBCDB5EA6/: 8DFAD0EF-B871-4B55-87E1-E19BBCDB5EA6.json
docs/assets/9EAAC3DD-3CE1-44F9-AC72-BB6B95C46921/: 9EAAC3DD-3CE1-44F9-AC72-BB6B95C46921.json
docs/assets/F5057EA2-4716-4807-A6B6-2DFCA1C75B8A/: F5057EA2-4716-4807-A6B6-2DFCA1C75B8A.jsonp
docs/assets/FC0D1B7E-3D8C-4537-95C4-D9631EE16589/: FC0D1B7E-3D8C-4537-95C4-D9631EE16589.jsonp
slides/assets/1B5C2223-71FB-476D-935B-2C991694052A/: 1B5C2223-71FB-476D-935B-2C991694052A.jsonp
slides/assets/2FC1FD04-C114-46E4-95C1-C991BD4F81B7/: 2FC1FD04-C114-46E4-95C1-C991BD4F81B7.json  2FC1FD04-C114-46E4-95C1-C991BD4F81B7.jsonp
slides/assets/5A21496E-F2D6-4854-A49E-3AC307F096B1/: 5A21496E-F2D6-4854-A49E-3AC307F096B1.json
src/: CPPCraftDemo.cpp  baseline.hpp  qb_column_lookup.cpp  qb_column_lookup.hpp  qb_record.hpp  qb_record_collection.cpp  qb_record_collection.hpp  qb_record_collection_test.cpp  string_trie.hpp  string_trie_test.cpp  timer.hpp  trie.hpp  trie_test.cpp  tuples.hpp  words.hpp
(+15 files in other folders)
